--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "postinstall": "mops install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@ic-reactor/react": "^1.7.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,6 +38,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-motoko": "^0.5.3",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3",
