--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "run-p frontend backend",
     "frontend": "vite --port 3000",
     "backend": "mo-dev --generate --deploy -y", 
-    "build": "tsc && vite build",
+    "build": "vite build",
     "test": "run-s test:backend test:frontend",
     "test:frontend": "vitest run",
     "test:backend": "mo-test",
