--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "workbench.startupEditor": "readme",
   "workbench.editorAssociations": {
     "README.md": "vscode.markdown.preview.editor"
-  }
+  },
+  "editor.wordWrap": "on",
+  "editor.lineNumbers": "off",
+  "editor.cursorStyle": "line-thin"
 }
